main menu alignment fixed

--- a/src/app/client/src/app/modules/core/components/sunbird-header/sunbird-header.component.scss
+++ b/src/app/client/src/app/modules/core/components/sunbird-header/sunbird-header.component.scss
@@ -3,8 +3,9 @@
 }
 .color {
   color: #f0f0f0 !important;
-  font-family: "Roboto", Corbel, Avenir, "Lucida Grande", "Lucida Sans", sans-serif !important;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif !important;
   font-size: 14px !important;
+  -webkit-font-smoothing: antialiased;
 }
 .color:hover {
   text-decoration: underline !important;
@@ -24,4 +25,7 @@
 }
 .align {
   text-align: right;
+}
+.searchColor {
+  background-color: #2a6fa8;
 }
